# fixbot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fixbot.example.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: CONFIGURATION.md
examples/: github-actions-scheduled.yml
src/fixbot/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  progress.py  run_log.py
src/fixbot/agents/: bug_fixer.py  orchestrator.py
src/fixbot/defaults/: __init__.py  bitbucket.py  datadog.py  github.py  github_issues.py  gitlab.py  grafana.py  jira.py  linear.py
src/fixbot/prompts/: bug_fixer.py  orchestrator.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_progress.py  test_prompts.py  test_run_log.py
