[project]
name = "fixbot"
version = "1.0.0"
description = "Automated production bug detection and fixing using Claude Agent SDK"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ryan Staab", email = "5721127+ryams@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.1.0",
]

[project.scripts]
fixbot = "fixbot.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
# Line length is managed by the formatter, which intentionally leaves long
# strings/comments/URLs intact; don't double-report them.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fixbot"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
